--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,9 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+
+# Blockchain
+
+- skill: Blockchain
+  description: Participated in many hackathons in which I worked on Blockchain and their real world applications
+  
